@@ -198,6 +198,12 @@ The default (0) means that the FxT tracing will start as soon as
 @code{starpu_init} is called.
 Setting it to 1 permits to avoid tracing start so early, and instead start when the application calls @code{starpu_start_fxt_profiling}.
 
+@item @code{trace_buffer_size}
+Specifies the buffer size used for FxT tracing. Starting from FxT version
+0.2.12, the buffer will automatically be flushed when it fills in, but it may
+still be interesting to specify a bigger value to avoid any flushing (which
+would disturb the trace).
+
 @end table
 @end deftp
 
